--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
   push:
     branches:
       - main
+      - development
 
 jobs:
   runningtest:
@@ -18,3 +19,22 @@ jobs:
           go-version: '1.22.0'
       - name: run test
         run: go test -v ./... -cover
+
+  buildimage:
+    name: build image
+    runs-on: ubuntu-latest
+    needs: runningtest
+    steps:
+      - uses: actions/checkout@v2
+      - name: create env
+        run: |
+          echo " ${{ secrets.ENV_PROJECT }} " > .env
+      - name: build image
+        run: docker build -t dikocesrt/habit-master:latest .
+      - name: login registry
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: push image
+        run: docker push dikocesrt/habit-master
