moved jwt secret

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-DBName = ""
-DBUser = ""
-DBPass = ""
-DBHost = ""
-DBPort = ""
+DBName = "" 
+DBUser = "" 
+DBPass = "" 
+DBHost = "" 
+DBPort = "" 
+CLOUDINARY_URL = "" 
+KEY_AI = "" 
+SECRET_JWT = "" 
